--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
-    repositories {
-        google()
-        jcenter()
-    }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
         
@@ -19,6 +14,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
     }
 }
 
@@ -30,5 +26,6 @@ ext {
     //App dependencies versions
     supportLibraryVersion = '27.0.2'
     butterknifeVersion = '8.7.0'
-    archComponentsVersion = '1.0.0'
+    archComponentsPersistanceVersion = '1.0.0'
+    archComponentsLifecycleVersion = '1.1.0'
 }
