gameactivity creado y navegable desde old y new games, mejorado chips no se abre keyboard al abrir newgames falta evento delete en oldgames

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.BrandedLaunch"
         android:fullBackupContent="@xml/backup_descriptor">
+
         <activity android:name=".app.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -17,6 +18,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity android:name=".app.game.GameActivity"/>
+
     </application>
 
 </manifest>
