--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme.BrandedLaunch"
         android:fullBackupContent="@xml/backup_descriptor">
 
-        <activity android:name=".app.main.MainActivity">
+        <activity android:name=".app.main.MainActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -19,7 +19,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".app.game.GameActivity"/>
+        <activity android:name=".app.game.GameActivity" android:screenOrientation="portrait"/>
 
     </application>
 
