--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,14 +4,16 @@
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.BrandedLaunch"
-        android:fullBackupContent="@xml/backup_descriptor">
+        android:theme="@style/AppTheme.BrandedLaunch">
 
-        <activity android:name=".app.main.MainActivity" android:screenOrientation="portrait">
+        <activity
+            android:name=".app.main.MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -27,6 +29,14 @@
             android:name=".app.new_game.NewGameActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysVisible"/>
+
+        <activity
+            android:name=".app.combinations.CombinationsActivity"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable"/>
+        </activity>
 
     </application>
 
