--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    flavorDimensions "MahjongScoring2"
+    flavorDimensions "environment"
     productFlavors {
         dev {
             applicationIdSuffix ".Dev"
