--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,4 +108,5 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-core-utils'
         exclude group: 'com.android.support', module: 'appcompat-v7'
     })
+    implementation 'com.android.support:support-annotations:28.0.0'
 }
