--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,7 +102,7 @@ dependencies {
     kapt "com.google.dagger:dagger-android-processor:$daggerVersion"
 
     //ARCH COMPONENTS
-    def room_version = "2.2.0-beta01"
+    def room_version = "2.2.1"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-rxjava2:$room_version"
@@ -128,11 +128,6 @@ dependencies {
     //UTILS
     implementation "org.apache.commons:commons-lang3:3.9"
 
-    //FAB MENU
-    implementation("com.github.clans:fab:1.6.4", {
-        exclude group: 'com.android.support', module: 'support-compat'
-        exclude group: 'com.android.support', module: 'support-annotations'
-        exclude group: 'com.android.support', module: 'support-core-utils'
-        exclude group: 'com.android.support', module: 'appcompat-v7'
-    })
+    //STEPPER
+    implementation 'com.github.badoualy:stepper-indicator:1.0.7'
 }
