--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext.kotlin_version = '1.3.50'
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.2'
+        classpath 'com.android.tools.build:gradle:3.6.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
     repositories {
@@ -28,4 +28,5 @@ ext {
     archComponentsPersistanceVersion = '1.1.1'
     archComponentsLifecycleVersion = '1.1.1'
     butterknifeVersion = '10.1.0'
+    buildToolsVersion = '29.0.1'
 }
