--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,16 @@
-.gradle
+*.iml
 .idea
-build
-gradle
-gradlew
-gradlew.bat
-local.properties
+.gradle
+/captures
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
 .DS_Store
-.externalNativeBuild
 /build
 /captures
-*.iml
-/*.iml
+/fantasy/src/main/res/values/tempid.xml
+/.idea/misc.xml
+*.apk
+*.aab
+/gradle/wrapper/gradle-wrapper.properties
 /app/schemas/com.etologic.mahjongscoring2.data.local_data_source.local.AppDatabase/1.json
