--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,22 @@
 buildscript {
-    ext.kotlin_version = '1.3.71'
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:8.1.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.10"
     }
     repositories {
-        jcenter()
+        mavenCentral()
         google()
     }
+}
+
+plugins {
+    id("com.google.devtools.ksp") version "1.9.10-1.0.13" apply false
 }
 
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         maven { url "https://jitpack.io" }
     }
 }
