--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,22 @@
-# Project-wide Gradle settings.
-
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
-
-# For more details on how to configure your build environment visit
+## For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
+#
+#Gradle
+# The jvmargs below have been tuned to work on CI. You might want to override this
+# value in ~/.gradle/gradle.properties to give more RAM if your machine has it available.
+org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx2048M"
+org.gradle.caching=true
+org.gradle.parallel=true
+org.gradle.configuration-cache=true
+# Initially setting this to warn to not be too disruptive if there are cases where configuration cache is not working.
+org.gradle.configuration-cache.problems=warn
 
-# Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
-android.enableJetifier=true
+#Kotlin
+kotlin.code.style=official
+
+#Android
+android.defaults.buildfeatures.buildconfig=true
 android.useAndroidX=true
-org.gradle.jvmargs=-Xmx1536m
+android.nonTransitiveRClass=true
 
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
+enableDefaultLibraryDependencies=true
