--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,4 +99,8 @@ dependencies {
 
     //UTILS
     implementation "org.apache.commons:commons-lang3:3.12.0"
+
+    //IN APP REVIEW
+    implementation("com.google.android.play:review:2.0.1")
+    implementation("com.google.android.play:review-ktx:2.0.1")
 }
