Added new Diffs Calculator screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,6 +76,12 @@
                 android:resource="@xml/searchable" />
         </activity>
 
+        <activity
+            android:name="com.etologic.mahjongscoring2.app.main.diffs_calculator.DiffsCalculatorActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity">
+        </activity>
+
     </application>
 
 </manifest>
