Combinations migrated to Coroutines and Flows. Database updated to v2 with migration.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,26 +4,27 @@ androidx-annotation = "1.7.0"
 androidx-appcompat = "1.6.1"
 androidx-browser = "1.7.0"
 androidx-cardview = "1.0.0"
+androidx-collection-ktx = "1.3.0"
 androidx-core-ktx = "1.12.0"
 androidx-espresso-core = "3.5.1"
 androidx-fragment-ktx = "1.6.2"
 androidx-legacy-support-v4 = "1.0.0"
-androidx-lifecycle-extensions = "2.2.0"
 androidx-lifecycle-livedata-ktx = "2.6.2"
 androidx-lifecycle-viewmodel-ktx = "2.6.2"
+androidx-navigation-fragment-ktx = "2.7.5"
+androidx-navigation-runtime-ktx = "2.7.5"
 androidx-recyclerview = "1.3.1"
 androidx-room = "2.6.0"
 androidx-test-ext-junit = "1.1.5"
-hilt = "2.47"
+hilt = "2.48.1"
 junit = "4.13.2"
 junit-jupiter = "5.10.1"
 kotlin-android = "1.9.20"
 ksp = "1.9.20-1.0.13"
 material = "1.10.0"
-review = "2.0.1"
 review-ktx = "2.0.1"
-rxandroid = "2.1.1"
-rxjava = "2.2.21"
+rxandroid = "2.1.1" #TODO: delete when fully migrated to coroutines
+rxjava = "2.2.21" #TODO: delete when fully migrated to coroutines
 truth = "1.1.5"
 
 [libraries]
@@ -31,18 +32,20 @@ androidx-annotation = { module = "androidx.annotation:annotation", version.ref =
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "androidx-appcompat" }
 androidx-browser = { module = "androidx.browser:browser", version.ref = "androidx-browser" }
 androidx-cardview = { module = "androidx.cardview:cardview", version.ref = "androidx-cardview" }
+androidx-collection-ktx = { module = "androidx.collection:collection-ktx", version.ref = "androidx-collection-ktx" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "androidx-core-ktx" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "androidx-espresso-core" }
 androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "androidx-fragment-ktx" }
 androidx-legacy-support-v4 = { module = "androidx.legacy:legacy-support-v4", version.ref = "androidx-legacy-support-v4" }
-androidx-lifecycle-common-java8 = { module = "androidx.lifecycle:lifecycle-common-java8", version.ref = "androidx-lifecycle-livedata-ktx" }
-androidx-lifecycle-extensions = { module = "androidx.lifecycle:lifecycle-extensions", version.ref = "androidx-lifecycle-extensions" }
 androidx-lifecycle-livedata-ktx = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "androidx-lifecycle-livedata-ktx" }
 androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidx-lifecycle-livedata-ktx" }
 androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "androidx-lifecycle-viewmodel-ktx" }
+androidx-navigation-fragment-ktx = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "androidx-navigation-fragment-ktx" }
+androidx-navigation-runtime-ktx = { module = "androidx.navigation:navigation-runtime-ktx", version.ref = "androidx-navigation-runtime-ktx" }
+androidx-navigation-ui-ktx = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "androidx-navigation-runtime-ktx" }
 androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "androidx-recyclerview" }
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "androidx-room" }
-androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "androidx-room" }
+androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "androidx-room" }
 androidx-room-rxjava2 = { module = "androidx.room:room-rxjava2", version.ref = "androidx-room" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
@@ -51,10 +54,9 @@ hilt-android-testing = { module = "com.google.dagger:hilt-android-testing", vers
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit-jupiter" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
-review = { module = "com.google.android.play:review", version.ref = "review" }
 review-ktx = { module = "com.google.android.play:review-ktx", version.ref = "review-ktx" }
-rxandroid = { module = "io.reactivex.rxjava2:rxandroid", version.ref = "rxandroid" }
-rxjava = { module = "io.reactivex.rxjava2:rxjava", version.ref = "rxjava" }
+rxandroid = { module = "io.reactivex.rxjava2:rxandroid", version.ref = "rxandroid" } #TODO: delete when fully migrated to coroutines
+rxjava = { module = "io.reactivex.rxjava2:rxjava", version.ref = "rxjava" } #TODO: delete when fully migrated to coroutines
 truth = { module = "com.google.truth:truth", version.ref = "truth" }
 
 [plugins]
